[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["adtak <adtak@adtak>"]

[tool.poetry.dependencies]
python = "^3.8"
"aws-cdk.core" = "^1.76.0"
"aws-cdk.aws-ec2" = "^1.76.0"
"aws-cdk.aws-ecs" = "^1.76.0"
"aws-cdk.aws-ecr" = "^1.76.0"
"aws-cdk.aws-ecs-patterns" = "^1.76.0"
"aws-cdk.aws-applicationautoscaling" = "^1.76.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
